[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "av1-encoder"
version = "0.1.0"
description = "Batch convert media to AV1 (NVENC) with Opus audio, preserving subs & metadata"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
homepage = ""

[project.scripts]
av1-encoder = "av1_encoder.__main__:main"
